# DualAxisRM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/data/: README.md  source.example.jsonl
scripts/: infer.sh  train_grpo.sh  train_sft.sh
src/dual_axis_rm/: __init__.py  prompts.py  rewards.py
tools/: build_dataset.py
